added supprimer annonces (modifier htal ghdda xD)

--- a/app/src/main/res/layout/activity_annonce_covoiture_form.xml
+++ b/app/src/main/res/layout/activity_annonce_covoiture_form.xml
@@ -95,6 +95,7 @@
             android:layout_width="108dp"
             android:layout_height="41dp"
             android:text="@string/choisir"
+            android:background="@drawable/annonce_item_style"
             android:backgroundTint="@color/colorAccent"
             app:layout_constraintBottom_toTopOf="@+id/ed_temps_depart"
             app:layout_constraintEnd_toStartOf="@+id/bt_tps_arr1"
@@ -130,6 +131,7 @@
             android:layout_width="108dp"
             android:layout_height="41dp"
             android:text="@string/choisir"
+            android:background="@drawable/annonce_item_style"
             android:backgroundTint="@color/colorAccent"
             app:layout_constraintBottom_toTopOf="@+id/ed_temps_arrivee"
             app:layout_constraintEnd_toEndOf="parent"
@@ -206,6 +208,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:background="@drawable/annonce_item_style"
             android:backgroundTint="@color/colorAccent"
             android:text="@string/ajouter_annonce"
             app:layout_constraintEnd_toEndOf="parent"
