--- a/app/src/main/res/layout/activity_annonce_covoitureur_form.xml
+++ b/app/src/main/res/layout/activity_annonce_covoitureur_form.xml
@@ -118,6 +118,7 @@
             android:id="@+id/bt_tps_arr"
             android:layout_width="108dp"
             android:layout_height="41dp"
+            android:background="@drawable/annonce_item_style"
             android:backgroundTint="@color/colorAccent"
             android:text="@string/choisir"
             app:layout_constraintBottom_toTopOf="@+id/ed_temps_arrivee1"
@@ -143,6 +144,7 @@
             android:id="@+id/bt_tps_dep"
             android:layout_width="109dp"
             android:layout_height="39dp"
+            android:background="@drawable/annonce_item_style"
             android:backgroundTint="@color/colorAccent"
             android:text="@string/choisir"
             app:layout_constraintBottom_toTopOf="@+id/ed_temps_depart1"
@@ -235,6 +237,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:background="@drawable/annonce_item_style"
             android:backgroundTint="@color/colorAccent"
             android:text="@string/suivant"
             app:layout_constraintEnd_toEndOf="parent"
