--- a/app/src/main/res/layout-v21/activity_detail_annonce_covoitureur.xml
+++ b/app/src/main/res/layout-v21/activity_detail_annonce_covoitureur.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="#e1e8ec"
@@ -29,8 +28,8 @@
         tools:layout_editor_absoluteX="25dp" />
 
     <LinearLayout
-        android:layout_width="374dp"
-        android:layout_height="623dp"
+        android:layout_width="366dp"
+        android:layout_height="532dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,9 +39,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="41dp"
-            android:orientation="horizontal"
             android:layout_marginBottom="40dp"
-            >
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="175dp"
@@ -54,10 +52,10 @@
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_clock"
                     android:gravity="center"
-                    android:textSize="@dimen/text_dim_detail"
-                    android:textStyle="italic"
                     android:text="@string/dateDepart"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/text_dim_detail"
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/detail_hrDep_covoitureur"
@@ -78,9 +76,9 @@
                     android:drawableStart="@drawable/ic_depart"
                     android:gravity="center"
                     android:text="@string/PtDepart"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/text_dim_detail"
-                    android:textStyle="italic"
-                    android:textColor="@color/colorPrimary" />
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/detail_ptDep_covoitureur"
@@ -94,8 +92,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:orientation="horizontal"
-            android:layout_marginBottom="40dp">
+            android:layout_marginBottom="40dp"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="175dp"
@@ -108,9 +106,9 @@
                     android:drawableStart="@drawable/ic_clock"
                     android:gravity="center"
                     android:text="@string/HrArrive"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/text_dim_detail"
-                    android:textStyle="italic"
-                    android:textColor="@color/colorPrimary" />
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/detail_hrArr_covoitureur"
@@ -132,9 +130,9 @@
                     android:drawableStart="@drawable/ic_arrive"
                     android:gravity="center"
                     android:text="@string/ptArrive"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/text_dim_detail"
-                    android:textStyle="italic"
-                    android:textColor="@color/colorPrimary" />
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/detail_ptArr_covoitureur"
@@ -148,8 +146,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:orientation="horizontal"
-            android:layout_marginBottom="40dp">
+            android:layout_marginBottom="40dp"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="176dp"
@@ -162,9 +160,9 @@
                     android:drawableStart="@drawable/ic_money"
                     android:gravity="center"
                     android:text="@string/prixAnnonce"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/text_dim_detail"
-                    android:textStyle="italic"
-                    android:textColor="@color/colorPrimary" />
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/detail_prix_covoitureur"
@@ -184,9 +182,9 @@
                     android:drawableStart="@drawable/ic_nbr_sup"
                     android:gravity="center"
                     android:text="@string/nbPlaces"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/text_dim_detail"
-                    android:textStyle="italic"
-                    android:textColor="@color/colorPrimary" />
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/detail_placeDisp"
@@ -200,18 +198,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="91dp"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:text="@string/description"
-               android:gravity="center"
-               android:textSize="@dimen/text_dim_detail"
-               android:textStyle="italic"
-               android:textColor="@color/colorPrimary"
-               />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/description"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_dim_detail"
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/detail_desc_covoitureur"
@@ -249,24 +245,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                />
+                android:gravity="center" />
 
             <TextView
                 android:id="@+id/detail_matV_covoitureur"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                />
+                android:gravity="center" />
 
             <TextView
                 android:id="@+id/detail_nbPlace_covoitureur"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                />
+                android:gravity="center" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -299,15 +292,15 @@
                     android:textColor="@color/colorAccent" />
 
                 <Button
-                    android:id="@+id/SupprimerCovoitureur"
+                    android:id="@+id/SupprimerAnnonceCovoitureur"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/Supprimer"
                     android:background="@drawable/annonce_item_style"
                     android:backgroundTint="@color/colorPrimary"
-                    android:textColor="@color/colorAccent"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:text="@string/Supprimer"
+                    android:textColor="@color/colorAccent" />
 
             </LinearLayout>
 
